--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings": {"DefaultConnection":"Server=2021-DEV-05;Database=skinet;Trusted_Connection=True;"}
+  "ConnectionStrings": {"DefaultConnection":"Server=2021-DEV-05;Database=skinet;Trusted_Connection=True;"},
+  "ApiUrl":"https://localhost:5001/"
 }
