--- a/client/package.json
+++ b/client/package.json
@@ -19,10 +19,14 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "bootstrap": "4.6.0",
+    "bootswatch": "5.2.0",
     "font-awesome": "4.7.0",
     "ngx-bootstrap": "8.0.0",
+    "ngx-spinner": "13.1.1",
+    "ngx-toastr": "14.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "xng-breadcrumb": "7.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
