--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings": {"DefaultConnection":"Server=2021-DEV-05;Database=skinet;Trusted_Connection=True;"},
+  "ConnectionStrings": {
+    "DefaultConnection":"Server=2021-DEV-05;Database=skinet;Trusted_Connection=True;",
+    "Redis":"localhost"
+  },
   "ApiUrl":"https://localhost:5001/"
 }
