--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,13 +2,18 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "ConnectionStrings": {
     "DefaultConnection":"Server=2021-DEV-05;Database=skinet;Trusted_Connection=True;",
+    "IdentityConnection":"Server=2021-DEV-05;Database=identity;Trusted_Connection=True;",
     "Redis":"localhost"
+  },
+  "Token":{
+    "Key":"super secret key",
+    "Issuer":"https://localhost:5001"
   },
   "ApiUrl":"https://localhost:5001/"
 }
